cmake_minimum_required(VERSION 3.20)
project(crisp_double_blind)

include(cmake/dependencies.cmake)

if(WIN32)
  set(crisp_prefix ${CMAKE_CURRENT_SOURCE_DIR}/crisp/windows-x86_64)
elseif(APPLE)
  if(CMAKE_SYSTEM_PROCESSOR STREQUAL "arm64")
    set(crisp_prefix ${CMAKE_CURRENT_SOURCE_DIR}/crisp/macos-arm64)
  else()
    set(crisp_prefix ${CMAKE_CURRENT_SOURCE_DIR}/crisp/macos-x86_64)
  endif()
else()
  if(CMAKE_SYSTEM_PROCESSOR MATCHES "^(aarch64|arm64)$")
    set(crisp_prefix ${CMAKE_CURRENT_SOURCE_DIR}/crisp/linux-aarch64)
  else()
    set(crisp_prefix ${CMAKE_CURRENT_SOURCE_DIR}/crisp/linux-x86_64)
  endif()
endif()

find_package(crisp CONFIG REQUIRED PATHS ${crisp_prefix})

add_subdirectory(sample)
add_subdirectory(evaluations)
